--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: irving's blog
-subtitle: 初学者~
-description: 钟表可以回到起点，却已不是昨天！
+subtitle: 钟表可以回到起点，却已不是昨天！
+description:
 author: Irving
 language: zh-Hans
 timezone: 
