--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,8 @@ code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
 
+duoshuo_shortname: Jwenqiang
+
 # Writing
 new_post_name: :title.md # File name of new posts
 default_layout: post
@@ -59,7 +61,7 @@ time_format: HH:mm:ss
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 5
 pagination_dir: page
 
 # Extensions
